--- a/paper-v1.tex
+++ b/paper-v1.tex
@@ -106,7 +106,7 @@ In the following sections we describe the architecture of the system and its bui
 \begin{itemize}
 \item \emph{AntsReview}, which manages access management and the core system (See Figure \ref{fig:contracts} \textbf{a,b,f,h}).
 \item \emph{Tokenomics}, which manages the incentive mechanism of the system (See Figure \ref{fig:contracts} \textbf{c,d,e,h}).
-\item \emph{Privacy}, which maintains the pseudo-anonymity of the system via AZTEC Protocol (See Figure \ref{fig:contracts} \textbf{d}).
+\item \emph{Privacy}, which maintains the anonymity of the system via AZTEC Protocol (See Figure \ref{fig:contracts} \textbf{d}).
 \end{itemize}
 
 \subsubsection{AntsReview}
