clean up discussion

--- a/paper-v1.tex
+++ b/paper-v1.tex
@@ -153,8 +153,8 @@ EOA in Ethereum are controlled by private key. An user can send messages from an
 \section{Discussions}
 In this session we discuss future developments not yet implemented and implications of AntsReview.
 \subsection{Possible developments}
-An AntReview, issued by an author would be seen as a poll, a container where Anters can stake Ether or ERC20 tokens from DeFi services including Dai\footnote[11]{\emph{Dai}.\textsc{URL:}https://docs.makerdao.com/smart-contract-modules/dai-module/dai-detailed-documentation.}, Chai\footnote[12]{\emph{Chai}.\textsc{URL:}https://chai.money.}, ... with the possibility to accrue interest for the duration of an AntReview (1 year on average), via MakerDAO DSR (Dai Saving Rate)\footnote[13]{\emph{Pot}.\textsc{URL:}https://docs.makerdao.com/smart-contract-modules/rates-module/pot-detailed-documentation.} or Compound\footnote[14]{\emph{Compound}.\textsc{URL:}https://compound.finance.} to cite a few.
- An AntsReview DAO could be formed in the future to allow ANTS stakers the ability to participates in a Decentralized Autonomous Organization which will be used to govern important aspects of the decentralized protocol, from smart contracts upgrades to more minor changes in settings across the protocol.
+An AntReview, issued by an author could be seen as a poll, a container where Anters can stake Ether or ERC20 tokens from DeFi services including Dai\footnote[11]{\emph{Dai}.\textsc{URL:}https://docs.makerdao.com/smart-contract-modules/dai-module/dai-detailed-documentation.}, Chai\footnote[12]{\emph{Chai}.\textsc{URL:}https://chai.money.}, ... with the possibility to accrue interest for the duration of an AntReview (1 year on average), via MakerDAO DSR (Dai Saving Rate)\footnote[13]{\emph{Pot}.\textsc{URL:}https://docs.makerdao.com/smart-contract-modules/rates-module/pot-detailed-documentation.} or Compound\footnote[14]{\emph{Compound}.\textsc{URL:}https://compound.finance.} to cite a few.
+An Ants-Review DAO could be formed in the future to allow ANTS stakers the ability to participates in a Decentralized Autonomous Organization which will be used to govern important aspects of the decentralized protocol, from smart contracts upgrades to more minor changes in settings across the protocol.
 \newline Hive. When Anters make a deposit into an AntReview, they will instantly receive the Hive token which represents their deposit and the accrued interest it gains over time in the AntReview.
 \newline This token doesn't need to be locked in the network and it can be traded, sold, or held as the Anter desires.
 \newline Hive will be implemented using a similar approach to Chai, an ERC20 token that accrues interest from MakerDAO's DSR or Compound, with name \emph{Hive} and symbol \emph{HIVE}
