--- a/paper-v1.tex
+++ b/paper-v1.tex
@@ -102,20 +102,15 @@ Thus, the system acts also as a reputation builder.
 
 In the following sections we describe the architecture of the system and its building blocks.
 \newline The Ants-Review Protocol is divided into different modules responsible for the following functionalities as shown in the flow-chart (See Figure \ref{fig:contracts}):
-
-\begin{itemize}
-\item \emph{AntsReview}, which manages access management and the core system (See Figure \ref{fig:contracts} \textbf{a,b,f,h}).
-\item \emph{Tokenomics}, which manages the incentive mechanism of the system (See Figure \ref{fig:contracts} \textbf{c,d,e,h}).
-\item \emph{Privacy}, which maintains the anonymity of the system via AZTEC Protocol (See Figure \ref{fig:contracts} \textbf{d}).
-\end{itemize}
+\emph{AntsReview}, which manages access management and the core system (See Figure \ref{fig:contracts} \textbf{a,b,f,h}).
+\emph{Tokenomics}, which manages the incentive mechanism of the system (See Figure \ref{fig:contracts} \textbf{c,d,e,h}).
+\emph{Privacy}, which maintains the anonymity of the system via AZTEC Protocol (See Figure \ref{fig:contracts} \textbf{d}).
 
 \subsubsection{AntsReview}
 AntsReview (See Figure \ref{fig:contracts} \textbf{a}) is the core of the smart contracts written in \emph{Solidity}\footnote[6]{\emph{Solidity}.\textsc{URL:}https://solidity.readthedocs.io.}, an object-oriented programming language for writing smart contracts that runs on the Ethereum Virtual Machine, deployed on Ethereum Rinkeby's Testnet\footnote[7]{\emph{Rinkeby Testnet}.\textsc{URL:}https://rinkeby.etherscan.io.}. It implements a bounty-like system where Alice (issuer) can issue an AntReview with the function \emph{issueAntReview()}, where she have to complete a series of required tasks that are essential to creating a transparent and openly accessible AntReview:
-\begin{itemize}
-  \item to upload the file containing the requirements of the peer-review and the paper into IPFS\cite{IPFS} and specify the IPFS Hash to be stored in the Ethereum Blockchain as \emph{proof of existence}, a notarization process by wich a document hash is timestamped into the block of Ethereum where the transaction take place, that allow manual verification of the existence of the document.
-  \item to specify a deadline in the form of a unix timestamp after which the fulfillment will no longer be accepted.
-  \item to specify the amount of Ether for the reward that will be transferred from Alice to the contract.
-\end{itemize}
+ 1. To upload the file containing the requirements of the peer-review and the paper into IPFS\cite{IPFS} and specify the IPFS Hash to be stored in the Ethereum Blockchain as \emph{proof of existence}, a notarization process by wich a document hash is timestamped into the block of Ethereum where the transaction take place, that allow manual verification of the existence of the document.
+ 2. To specify a deadline in the form of a unix timestamp after which the fulfillment will no longer be accepted.
+ 3. To specify the amount of Ether for the reward that will be transferred from Alice to the contract.
 
 Bob (peer-reviewer) after downloading the file with Alice's paper and requirements, by leveraging on the content-addressing feature of IPFS that allows anyone to find the document using an IPFS explorer, can submit a peer-review, before the deadline, by fulfilling the AntReview created by Alice, with the function \emph{fulfillAntReview()}, by specifying the AntReview of interest as well as the IPFS Hash of the peer-review uploaded on IPFS.
 Alice can accept the peer-review submitted by Bob with the function \emph{acceptAntReview()}, by specifying the AntReview as well as the peer-review of interest, that will transfer the reward specified for the AntReview from the contract to Bob.
@@ -124,9 +119,6 @@ If Alice doen't receive any peer-review, she can cancel the AntReview with the f
 Access management of the Ants-Review protocol is defined and controlled by AntsReviewRoles (See Figure \ref{fig:contracts} \textbf{b}). It's implemented by leveraging on \emph{AccessControl.sol} by OpenZeppelin Solidity Library\footnote[8]{\emph{OpenZeppelin Library}.\textsc{URL:}https://openzeppelin.com.}, through the creation of the Issuer and Peer-Reviewer Roles.
 \newline It also integrates a circuit breaker design pattern via \emph{Pausable.sol} by OpenZeppelin to allow the Pauser Role, that by default is the Owner of the smart contracts, able to pause (or unpause) the functions in case of a security emergency, such as an attack to the smart contracts. In this way, only the Issuer can create a new AntReview.
 \newline One of the key aspects of the protocol is the concept of Proof of Existence. In Ethereum \cite{Ethereum} the concept of immutability is achieved via the blockchain and the proof of work consensus algorithm by a chain of timestamped block merkle tree root hashes that are secured by miners competing computations.
-\newline Ants-Review is evaluating the advantages of storing the hashes of the peer-reviews into a Merkle Tree \cite{BayerHaber1992} to achieve immutability and efficiency in verifying the data with a complexity of O(logn) for searching through the tree.
-\newline A Merkle tree is a particular type of binary tree, formed by a set of nodes with a large set of leaf nodes at the bottom of the tree representing the hash of the original data, a set of intermediate nodes where each node is the sum of the two children hashes, ending with a single root hash. In order to verify if a specific hash is included into a Merkle Tree by leveraging on \emph{MerkleProof.sol} (OpenZeppelin Library), we need to provide a proof, generated from the leaf of interest, that represents the ramification derived from the leaf, the root hash and, finally, the leaf we want to verify.
-\newline The paper and peer-review documents will be included into a Merkle Tree by hashing the data using \emph{keccak256}, a cryptographic hashing algorithm available in Solidity.
 
 \subsubsection{Tokenomics}
 AntsReview integrates a few \emph{ERC20}\footnote[9]{\emph{EIP 20}.\textsc{URL:}\url{https://eips.ethereum.org/EIPS/eip-20}.} tokens, each of which plays an integral role in the functioning and anonymity of the decentralized protocol.
@@ -138,11 +130,8 @@ AntsReview integrates a few \emph{ERC20}\footnote[9]{\emph{EIP 20}.\textsc{URL:}
 
 \subsubsection{Privacy}
 The anonymity of an agent in the system is achieved in two ways:
-
-\begin{itemize}
-  \item via pseudo-anonymity granted through Ethereum's Externally Owned Accounts (EOA) addresses that can pseudo-obscure the identity of the agent.
-  \item via private transactions allowed by AZTEC Protocol security layer via zkANTS. Future developments will allow to leverage on PLONK\cite{PLONK}proofs, a universal ZK-SNARK construction, to reduce gas costs and improve scalability.
-\end{itemize}
+1. Via pseudo-anonymity granted through Ethereum's Externally Owned Accounts (EOA) addresses that can pseudo-obscure the identity of the agent.
+2. Via private transactions allowed by AZTEC Protocol security layer via zkANTS. Future developments will allow to leverage on PLONK\cite{PLONK}proofs, a universal ZK-SNARK construction, to reduce gas costs and improve scalability.
 
 EOA in Ethereum are controlled by private key. An user can send messages from an externally owned account by creating and signing a transaction. The limitation of this type of solution concerning the protocol's privacy is due to the fact that blockchain and transactions are public, therefore the details of transactions are visible to anyone by browsing a block explorer (like Etherscan), and are subjected to data mining that could extract value and identify users in the blockchain.
 \newline To avoid that, Ants-Review will implement zkANTS, an Ant token wrapped into AZTEC Protocol. In the future zkANTS could leverage on zkSNARKS and PLONK, allowing private transactions in the system to maintain the privacy and anonymity of Peer-Reviewers.
