--- a/paper-v1.tex
+++ b/paper-v1.tex
@@ -103,9 +103,9 @@ Thus, the system acts also as a reputation builder.
 
 In the following sections we describe the architecture of the system and its building blocks.
 \newline The Ants-Review Protocol is divided into different modules responsible for the following functionalities, as shown in the flow-chart (see Figure \ref{fig:contracts}):
-\emph{AntsReview}, which manages access management and the core system (see Figure \ref{fig:contracts}, a-b; f; h).
-\emph{Tokenomics}, which manages the incentive mechanism of the system (see Figure \ref{fig:contracts}, c-e; h}).
-\emph{Privacy}, which maintains the anonymity of the system via AZTEC Protocol (see Figure  \ref{fig:contracts}, d).
+\emph{AntsReview}, which manages access management and the core system (see Figure \ref{fig:contracts}, (\textbf{a, b, f, h})).
+\emph{Privacy}, which maintains the anonymity of the system via AZTEC Protocol (see Figure  \ref{fig:contracts}, (\textbf{d})).
+\emph{Tokenomics}, which manages the incentive mechanism of the system (see Figure \ref{fig:contracts}, (\textbf{c, e, h})}).
 
 \subsubsection{AntsReview.}
 AntsReview (see Figure \ref{fig:contracts} (\textbf{a}) is the core of the smart contracts written in \emph{Solidity}\footnote[6]{\emph{Solidity}.\textsc{URL:}https://solidity.readthedocs.io.}, an object-oriented programming language for writing smart contracts that runs on the Ethereum Virtual Machine, deployed on Ethereum Rinkeby's Testnet\footnote[7]{\emph{Rinkeby Testnet}.\textsc{URL:}https://rinkeby.etherscan.io.}. AntsReview implements a bounty-like system where Alice (issuer) can issue an AntReview with the function \emph{issueAntReview()}.
@@ -117,28 +117,26 @@ AntsReview (see Figure \ref{fig:contracts} (\textbf{a}) is the core of the smart
 Alice can accept the peer-review submitted by Bob with the function \emph{acceptAntReview()}, by specifying the AntReview as well as the peer-review of interest, that will transfer the reward specified for the AntReview from the contract to Bob.
 If Alice does not receive any peer-review, she can cancel the AntReview with the function \emph{cancelAntReview()}, by specifying the AntReview of interest, and the contract will transfer the reward for the AntReview back to Alice.
 
-Access management of the Ants-Review protocol is defined and controlled by AntsReviewRoles (see Figure \ref{fig:contracts} (\textbf{b})). It is implemented by leveraging on \emph{AccessControl.sol} by OpenZeppelin Solidity Library\footnote[8]{\emph{OpenZeppelin Library}.\textsc{URL:}https://openzeppelin.com.}, through the creation of the Issuer and Peer-Reviewer Roles.
-\newline It also integrates a circuit breaker design pattern via \emph{Pausable.sol} by OpenZeppelin to allow the Pauser Role, that by default is the Owner of the smart contracts, able to pause (or unpause) the functions in case of a security emergency, such as an attack to the smart contracts. In this way, only the Issuer can create a new AntReview.
-
-
-\subsubsection{Tokenomics}
-AntsReview integrates a few \emph{ERC20}\footnote[9]{\emph{EIP 20}.\textsc{URL:}\url{https://eips.ethereum.org/EIPS/eip-20}.} tokens, each of which plays an integral role in the functioning and anonymity of the decentralized protocol.
-\newline ANTS (see Figure \ref{fig:contracts}, (\textbf{c})), is the primary protocol ERC20 token and can be staked into an AntReview.
-\newline ANTS is implemented by inheriting \emph{ERC20PresetMinterPauser.sol} from OpenZeppelin Library with name \emph{Ants-Review} and symbol \emph{ANTS}.
-\newline zkANTS (see Figure \ref{fig:contracts}, (\textbf{d})), is a wrapper of ANTS that will be used inside the protocol to allow private transactions among the agents, preserving their anonymity as well as the amount of the AntReview reward and the contributions by the Anters (members of Ants-Review Community).
-\newline zkANTS will be implemented via AZTEC Protocol \cite{AZTEC}, that uses a cryptographic engine \emph{ACE.sol}, a contract responsible for validating the set of AZTEC zero-knowledge proofs and performing any transfer instructions involving AZTEC notes, minted into a zkAsset, that can be converted into ERC20 tokens. In order to implement a zkAsset called zkANTS, \emph{zkAsset.sol}, a contract implementation of a confidential token, that follows the EIP-1724 standard \footnote[10]{\emph{EIP  1724}.\textsc{URL:}\url{https://github.com/ethereum/EIPs/issues/1724.}} will be used as template to build an AZTEC-compatible asset.
-\newline To optimize and scale transactions, AZTEC Protocol ZK-SNARKs, will be extended in the future to PLONK \cite{PLONK} to collapse the gas costs of private transactions.
+Access management of the Ants-Review protocol is defined and controlled by AntsReviewRoles (see Figure \ref{fig:contracts} (\textbf{b})), that is implemented by leveraging on \emph{AccessControl.sol} by OpenZeppelin Solidity Library\footnote[8]{\emph{OpenZeppelin Library}.\textsc{URL:}https://openzeppelin.com.}, through the creation of the Issuer and Peer-Reviewer Roles.
+\newline AntsReviewRoles also integrates a circuit breaker design pattern via \emph{Pausable.sol} by OpenZeppelin to allow the Pauser Role, that by default is granted to the Owner of the smart contracts, to be able to pause (or unpause) the functions in case of a security emergency, such as an attack to the smart contracts.
 
 \subsubsection{Privacy}
 The anonymity of an agent in the system is achieved in two ways:
-1. Via pseudo-anonymity granted through Ethereum's Externally Owned Accounts (EOA) addresses that can pseudo-obscure the identity of the agent.
-2. Via private transactions allowed by AZTEC Protocol security layer via zkANTS. Future developments will allow to leverage on PLONK\cite{PLONK}proofs, a universal ZK-SNARK construction, to reduce gas costs and improve scalability.
+\newline 1. via pseudo-anonymity, granted through Ethereum's Externally Owned Accounts (EOA) addresses that can pseudo-obscure the identity of the agent;
+\newline 2. via private transactions allowed by AZTEC Protocol security layer via zkANTS. Future developments will allow to leverage on PLONK\cite{PLONK}proofs, a universal ZK-SNARK construction, to reduce gas costs and improve scalability.
 
 EOA in Ethereum are controlled by private key. An user can send messages from an externally owned account by creating and signing a transaction. The limitation of this type of solution concerning the protocol's privacy is due to the fact that blockchain and transactions are public, therefore the details of transactions are visible to anyone by browsing a block explorer (like Etherscan), and are subjected to data mining that could extract value and identify users in the blockchain.
 \newline To avoid that, Ants-Review will implement zkANTS, an Ant token wrapped into AZTEC Protocol. In the future zkANTS could leverage on zkSNARKS and PLONK, allowing private transactions in the system to maintain the privacy and anonymity of Peer-Reviewers.
 \newline The AZTEC Protocol was conceived to enable privacy on public blockchains. It uses a series of zero-knowledge proofs (ZK-SNARKs) and homomorphic encryption to validate encrypted transactions.
 \newline ZK-SNARKs (Zero-Knowledge Succinct Non-Interactive Argument of Knowledge) \cite{ZKSNARKs} refers to a proof construction where one can prove possession of certain information, like a secret key, without revealing that information, and without any interaction between prover and verifier.
 \newline Future developments will investigate viable solutions, for scaling the system, like ZK-ZK Rollup by AZTEC Protocol, one of the options being developed for a type of layer 2 construction that runs on top of Ethereum to improve scalability. This will enable smart contracts to run  at scale with quasi-instant transactions while still being secured by Ethereum.
+
+\subsubsection{Tokenomics}
+AntsReview integrates a few \emph{ERC20}\footnote[9]{\emph{EIP 20}.\textsc{URL:}\url{https://eips.ethereum.org/EIPS/eip-20}.} tokens, each of which plays an integral role in the functioning and anonymity of the decentralized protocol.
+\newline ANTS (see Figure \ref{fig:contracts}, (\textbf{c})) is the primary protocol token and can be staked into an AntReview.
+\newline ANTS is implemented by inheriting \emph{ERC20PresetMinterPauser.sol} from OpenZeppelin Library with name \emph{Ants-Review} and symbol \emph{ANTS}.
+\newline zkANTS (see Figure \ref{fig:contracts}, (\textbf{d})) is a wrapper of ANTS that will be used inside the protocol to allow private transactions among the agents, preserving their anonymity as well as the amount of the AntReview reward and the contributions by the Anters (members of the Ants-Review Community). zkANTS will be implemented via AZTEC Protocol \cite{AZTEC}, that uses a cryptographic engine, \emph{ACE.sol}, a contract responsible for validating the set of AZTEC zero-knowledge proofs and performing any transfer instructions involving AZTEC notes, minted into a zkAsset, that can be converted into ERC20 tokens. In order to implement a zkAsset called zkANTS, \emph{zkAsset.sol}, a contract implementation of a confidential token that follows the EIP-1724 standard \footnote[10]{\emph{EIP  1724}.\textsc{URL:}\url{https://github.com/ethereum/EIPs/issues/1724.}}, will be used as template to build an AZTEC-compatible asset.
+\newline To optimize and scale transactions, AZTEC Protocol ZK-SNARKs, will be extended in the future to PLONK \cite{PLONK} to collapse the gas costs of private transactions.
 
 \section{Discussions}
 In this session we discuss future developments not yet implemented and implications of AntsReview.
