--- a/paper-v1.tex
+++ b/paper-v1.tex
@@ -82,7 +82,7 @@ Thus, the system acts also as a reputation builder.
 \paragraph{Transparency and re-usability of the records.} The peer-review history, including authors' replies and editors' recommendations, should be openly and permanently accessible to the community (in the form of 'open reports' of open peer-reviews) even before articles' publication in order to  make editorial decisions more democratic and prevent waste of knowledge. Following the example of models offered by journals peer-review consortia, such as the \emph{Neuroscience Peer Review Consortium}\footnote[5]{\emph{Neuroscience Peer Review Consortium}.\textsc{URL:}http://nprc.incf.org.} and independent companies like \emph{ResearchSquare}  and \emph{Peerage of Science}, peer-reviews in Ants-Review will be transferable across journals (like in 'cascading' or 'portable peer-reviews').
 
 \paragraph{Accountability via pseudo-anonymity.} In order to counteract malicious behaviour (see 2.1) affecting the integrity of the reviews but also to correctly attribute the intellectual contributions making sure there are no conflict of interest, it's important to be able to track back the identities of the contributors to a peer-review report. This is possible if the platform acts like a version control system where commits are permanent and their hashes timestamped. InterPlanetary File System (IPFS) \cite{IPFS} is a peer-to-peer hypermedia protocol for storing data in a distributed file system over the internet which guarantees data \emph{immutability} and unique file identification via cryptographic hashes. IPFS' hashes are then stored inside the smart contracts' state that is timestamped into the Ethereum blocks where  the transactions take place; there, data remain unaltered and indelible. This notarization process is called Proof of Existence (PoE)and allows manual verification of the existence of the document.
-\newline To prevent retaliation for negative peer-reviews and to promote the participation of early researchers who might feel intimidated to judge the scientific work of senior authors, the Ants-Review system maintains the privacy of both authors and reviewers in a double-blind approach via Ethereum’s Externally Owned Accounts(EOA) addresses, zero-knowledge proofs and homomorphic encryption (see § Privacy in 3.2).
+\newline To prevent retaliation for negative peer-reviews and to promote the participation of early researchers who might feel intimidated to judge the scientific work of senior authors, the Ants-Review system maintains the privacy of both authors and reviewers in a double-blind approach via Ethereum’s Externally Owned Accounts(EOA) addresses, zero-knowledge proofs, a cryptographic method where a party can prove to another party the possession of certain information, like a secret key, without revealing that information (see § Privacy in 3.2).
 
 \paragraph{Inclusiveness via gamification.} As a final step we propose that all the community is involved in the process of peer-reviewing abolishing the editorial selection process ('open participation', 'open interaction', 'open platform' \cite{OPR-Ross-Hellauer}). In this way, the pool of reviewers is enriched and allows younger researchers to get the appropriate training through interactive feedback. Moreover, peer-reviews could be evaluated, commented, criticised by the other members of the scientific community, enabling a virtuous loop of verification. \newline An interesting addition would be to introduce Quadratic Voting (QV) \cite{QVWeyl} for the reviews' evaluation. QV replaces the discrete concept of one-person-one-vote with the non-linear one of n vote at the cost of $n^2$ and is optimal in the context of multiple choices. If we consider scientific outputs as public goods, then the community can vote (with voting tokens) 'how much they care' for a specific peer-review. A rank of peer-reviews would result from the voting process, with a more fine-graded distribution that might reflect issues that have a high value to few people and low value to more people. \newline Finally, it's conceivable that the members of the community participate to the share of the tokens by voting to the best peer-reviews. This solution would create a self-reinforcing ethical behaviour where the fair evaluation of peer-reviews would be also in the interest of the agents at play.
 
