init discussion w/@naszam

--- a/paper-v1.tex
+++ b/paper-v1.tex
@@ -138,7 +138,8 @@ Ants-Review integrates a few \emph{ERC20}\footnote[9]{\emph{EIP 20}.\textsc{URL:
 
 \section{Discussions}
 In this session we discuss future developments not yet implemented and implications of AntsReview.
-\subsection{Possible developments}
+\subsection{Future developments}
+So far we have described how Ants-Review protocol can solve the limitations of the current peer-review  system (see 2.1). In particular the lack of recognition, the lack of transparency, fraud and misconduct are solved via the Ants-Review Protocol (see § AntsReview in 3.2); social and cognitive biases arvia anonymity granted by AZTEC Protocol (see § Privacy in 3.2). 
 An AntReview, issued by an author could be seen as a poll, a container where Anters can stake Ether or ERC20 tokens from DeFi services including Dai\footnote[11]{\emph{Dai}.\textsc{URL:}https://docs.makerdao.com/smart-contract-modules/dai-module/dai-detailed-documentation.}, Chai\footnote[12]{\emph{Chai}.\textsc{URL:}https://chai.money.}, ... with the possibility to accrue interest for the duration of an AntReview (1 year on average), via MakerDAO DSR (Dai Saving Rate)\footnote[13]{\emph{Pot}.\textsc{URL:}https://docs.makerdao.com/smart-contract-modules/rates-module/pot-detailed-documentation.} or Compound\footnote[14]{\emph{Compound}.\textsc{URL:}https://compound.finance.} to cite a few.
 An Ants-Review DAO could be formed in the future to allow ANTS stakers the ability to participates in a Decentralized Autonomous Organization which will be used to govern important aspects of the decentralized protocol, from smart contracts upgrades to more minor changes in settings across the protocol.
 \newline Hive. When Anters make a deposit into an AntReview, they will instantly receive the Hive token which represents their deposit and the accrued interest it gains over time in the AntReview.
